T71: Fixed viewportHeight bug

--- a/src/components/pages/settings-page/settings-panel/SettingsPanel.scss
+++ b/src/components/pages/settings-page/settings-panel/SettingsPanel.scss
@@ -16,7 +16,7 @@
   .settings-panel-item {
     cursor: pointer;
     border: thin solid $lightly-highlighted-background;
-    font-size: $standard-font-size;
+    font-size: $small-font-size;
 
     .icon {
       font-size: $big-font-size;
