--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
 
     &:before {
-        background: linear-gradient(350deg, rgb(0, 217, 255) 30%, rgba(0,226,255,0) 100%);
+        background: linear-gradient(350deg, rgb(0, 217, 255) 30%, rgba(0, 226, 255, 0) 100%);
         content: "";
         background-size: cover;
         position: absolute;
