T72: Fixed resize bug on mobiles

--- a/src/components/custom-alert/CustomAlert.scss
+++ b/src/components/custom-alert/CustomAlert.scss
@@ -15,7 +15,7 @@
     box-sizing: border-box;
     min-width: calc(#{$max-page-width} * 0.85);
     flex-grow: 1;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     display: flex;
     background: $gradient-transparent-background;
 
