--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat');
+@import "styles/variables";
 
 body {
     margin: 0;
@@ -7,17 +8,6 @@ body {
     font-family: 'Montserrat', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-
-    &:before {
-        background: linear-gradient(350deg, rgb(0, 217, 255) 30%, rgba(0, 226, 255, 0) 100%);
-        content: "";
-        background-size: cover;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        opacity: 0.2;
-        z-index: 0;
-    }
 }
 
 *::-webkit-scrollbar {
@@ -28,7 +18,7 @@ body {
     -webkit-tap-highlight-color: transparent;
 }
 
-@media (min-width: 900px) {
+@media (min-width: $md) {
     * {
         scrollbar-width: auto;
         scrollbar-color: #ffc400 rgba(0, 0, 0, 0);
