--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -49,3 +49,5 @@ $button-shadow: 0 8px 5px -5px rgba(20, 20, 20, 0.1);
 $firm-shadow: 0px 0px 10px 0px rgba(29, 29, 29, 0.5);
 
 $max-page-width: calc(65 * var(--vh));
+
+$md: 750px;
