--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -44,6 +44,7 @@
   align-items: center;
   justify-content: center;
   margin: 3px;
+  font-weight: 600;
   font-size: $chip-font-size;
   background-color: $white-transparent-background-20;
   padding: $small-element-spacing $standard-element-spacing;
