--- a/src/components/tags/complete-tags-list/CompleteTagsList.scss
+++ b/src/components/tags/complete-tags-list/CompleteTagsList.scss
@@ -22,6 +22,7 @@
 
     .tag-chip {
       @include chip;
+      cursor: pointer;
 
       &.selected {
         background-color: $strong-highlighted-background;
